--- a/Salud/Info.plist
+++ b/Salud/Info.plist
@@ -7,7 +7,7 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fbAPP-ID</string>
+				<string>fb682676173987587</string>
 				<string>com.googleusercontent.apps.133172534187-7n63962i0h1t9i1kqlnksmk69si5e9do</string>
 			</array>
 		</dict>
@@ -32,7 +32,7 @@
 		</dict>
 	</dict>
 	<key>FacebookAppID</key>
-	<string>APP-ID</string>
+	<string>682676173987587</string>
 	<key>FacebookClientToken</key>
 	<string>CLIENT-TOKEN</string>
 	<key>FacebookDisplayName</key>
@@ -42,5 +42,6 @@
 		<string>fbapi</string>
 		<string>fb-messenger-share-api</string>
 	</array>
+    
 </dict>
 </plist>
